# csv-stats

./: .gitignore  README.md  pyproject.toml
src/csv-stats/: anova.py
src/csv-stats/utils/: test_assumptions.py
src/csv_stats.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/csv_stats/utils/: save_stats.py
src/csvstats/: anova.py  ttest.py
src/csvstats/utils/: plot_data.py  run_all_columns.py  save_stats.py
tests/: test_anova1way.py
